--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -1,1 +1,24 @@
-<p>courses works!</p>
+
+<!-- courses.component.html -->
+
+<div class="container">
+    <h1>Courses</h1>
+    <div class="row">
+      <div class="col-md-4" *ngFor="let course of courses">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">{{ course.courseName }}</h5>
+            Add more course details here if needed
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="icons">
+    <i class=" 	fas fa-user"></i>
+     <div id="menu-btn" class="fas fa-star"></div>
+     <div id="user-btn" class="fas fa-user"></div>
+      <div id="search-btn" class="fas fa-search"></div>
+      <div id="toggle-btn" class="fas fa-sun"></div>
+   </div>
