--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" *ngIf="showHeader">
   <div class="logo-container">   
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
@@ -13,26 +13,23 @@
               <a class="nav-link" routerLink="/home">Home</a>
             </li>
             <li class="nav-item">
+              
+
               <a class="nav-link" routerLink="/about">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" routerLink="/contact">Contact</a>
             </li>
-            <li class="nav-item dropdown" *ngIf="authService.isLoggedIn()">
-              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Select Course </a>
-              <div class="dropdown-menu ">
-                <li class="list-group-item list-group-item-action" *ngFor="let category of categories">
-                  {{ category[1] }}
-                </li>              
-              </div>
+            <li class="nav-item " *ngIf="authService.isLoggedIn()">
+              <a class="nav-link" routerLink="/dashboard">Dashboard</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto mr-5">
             <li class="nav-item bg-light" *ngIf="!authService.isLoggedIn()">
-              <a routerLink="/login">Login</a>
+              <a routerLink="/login"> <i class=" 	fas fa-user"></i> Login</a>
             </li>
             <li class="nav-item bg-light" *ngIf="authService.isLoggedIn()">
-              <a (click)="logout()">Logout</a>
+              <a (click)="logout()"><i class="fas fa-power-off"></i> Logout</a>
             </li>
           </ul>
           
