--- a/src/app/pages/registration-form/registration-form.component.css
+++ b/src/app/pages/registration-form/registration-form.component.css
@@ -37,3 +37,14 @@
 .login-forms h1 {
   font-size: 2em;
 }
+.password-input-group {
+  position: relative;
+}
+
+.password-toggle-icon {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
